--- a/style/style.css
+++ b/style/style.css
@@ -33,3 +33,14 @@ h1{
     border-bottom: 2px solid blue;
     color: blue;
 }
+
+
+.main_container{
+    width: 60%;
+    margin: auto;
+}
+
+.main_container h2{
+    padding: 20px 0;
+    font-weight: 100;
+}
