--- a/style/style.css
+++ b/style/style.css
@@ -45,7 +45,10 @@ h1{
     padding: 20px 0;
     font-weight: 100;
 }
-
+.main_container h3{
+    padding: 20px 0;
+    font-weight: 200;
+}
 .main_container a{
     text-decoration: none;
     color: rgb(0, 119, 255);
