--- a/style/style.css
+++ b/style/style.css
@@ -38,7 +38,7 @@ h1{
 .main_container{
     width: 50%;
     margin: auto;
-    padding-top: 50px;
+    padding: 100px 0;
 }
 
 .main_container h2{
@@ -56,7 +56,7 @@ h1{
 .main_container p{
     padding: 10px 0;
     font-size: 14px;
-    line-height: 20px;
+    line-height: 30px;
 }
 .main_container ol{
     padding-left: 20px;
